@@ -1,3 +1,4 @@
 #!/bin/sh
 
-g++ -o driver driver.cc -lbobcat
+g++ --std=c++0x -o driver driver.cc -lbobcat
+# g++ --std=c++0x -o driver driver.cc ../*.o -lbobcat
