@@ -1,6 +1,8 @@
 bobcat (2.07.00)    ISN
 
   * FBB::insertable and FBB::throwable are no longer required when using Errno
+  * The gptr() < egptr() checks in underflow() functions (IFdStreambuf and
+    Randbuffer) are superfluous and have been removed
 
 bobcat (2.06.00)
 
